added pages with bookmarks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 </head>
 
 <body>
-
+    <div class="common_frame">
+        <div class="first_page">
+            <div class="bookmark"></div>
+        </div>
+        <div class="second_page">
+            <div class="bookmark"></div>
+        </div>
+        <div class="third_page">
+            <div class="bookmark"></div>
+        </div>
+    </div>
 </body>
 
 </html>
