added full page information

--- a/index.html
+++ b/index.html
@@ -14,10 +14,44 @@
     <div class="common_frame">
         <div class="first_page">
             <div class="bookmark"></div>
+            <div class="content">
+                <h1> Lorem ipsum dolor sit amet </h1>
+                <img src="images/cup.jpg" alt="CSS IS AWESOME">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel velit in nisl accumsan blandit.
+                    Mauris sed consequat tortor. Etiam enim odio, elementum sed risus id, faucibus lobortis felis.
+                    Donec maximus dolor in egestas fringilla. Pellentesque a neque quis eros lobortis mollis sit amet ut dolor.
+                    Aenean nec quam dictum, pharetra nulla et, ornare eros.</p>
+
+                <p>Quisque accumsan felis vel dolor placerat, sed imperdiet dolor tempor. Morbi et molestie dolor, ac consectetur ipsum.
+                    Nullam varius risus in purus bibendum, in auctor odio eleifend. Proin cursus leo quis ex commodo,
+                    non placerat diam finibus.</p>
+
+                <img src="images/web-designer-developer-jokes.jpg" alt="YOU ARE THE CSS TO MY HTML">
+                <p> Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget.
+                    Donec nec metus nunc. Nullam tempus convallis porttitor. Aliquam tempus gravida fermentum.
+                    Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor.
+                    Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor.</p>
+
+                <h2>Nulla viverra tortor efficitur vestibulum tristique.</h2>
+
+                <img class="img_left_top" src="images/ninja.jpg" alt="Ninja-CSS">
+                <img class="img_right_top" src="images/titanic.jpg" alt="Titanic-CSS">
+
+                <img class="img_left_bottom" src="images/puns.jpg" alt="Puns-CSS">
+                <img class="img_right_bottom" src="images/triangle.jpg" alt="Triangle-CSS">
+
+                <footer>
+                    <p>Suspendisse bibendum porttitor purus quis vestibulum. Etiam pellentesque justo ac dui cursus tincidunt.
+                        Etiam iaculis semper metus vel facilisis. Etiam ut mi nec libero ullamcorper feugiat a eu augue.</p>
+                </footer>
+            </div>
         </div>
+
         <div class="second_page">
             <div class="bookmark"></div>
         </div>
+
         <div class="third_page">
             <div class="bookmark"></div>
         </div>
