added Share panel

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             <div class="bookmark"></div>
         </div>
     </div>
+
+    <div class="social">
+        <p>Share this</p>
+        <a href="#"><img src="images/facebook-icon.png" alt="Facebook-Icon"></a>
+        <a href="#"><img src="images/twitter-icon.png" alt="Twitter-Icon"></a>
+        <a href="#"><img src="images/instagram-icon.png" alt="Instagram-Icon"></a>
+    </div>
 </body>
 
 </html>
